<?xml version="1.0"?>
<package format="3">
    <name>unitree_gazebo</name>
    <version>0.0.0</version>
    <description>The unitree_gazebo package. It can start a gazebo simulation</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>controller_manager</depend>
    <depend>joint_state_broadcaster</depend>
    <depend>robot_state_publisher</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
