<?xml version="1.0"?>
<package format="3">
  <name>unitree_legged_real</name>
  <version>0.0.0</version>
  <description>The unitree_legged_real package</description>

  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_legged_msgs</depend>
  <depend>unitree_legged_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>