<?xml version="1.0"?>

<package format="3">
  <name>unitree_legged_sdk</name>
  <version>0.0.0</version>
  <description>The unitree_legged_sdk package.</description>
  <maintainer email="laikago@unitree.cc">unitree</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>